trying to fix radio buttons spacing

--- a/kinetiplants/styles/styles.css
+++ b/kinetiplants/styles/styles.css
@@ -487,8 +487,8 @@ select {
   margin: .5em auto 1.75em;
 }
 
-input[type="radio"] {
-  margin-left: 3em;
+.radio-container label {
+  margin-right: 2em;
 }
 
 textarea {
